# logos-module-loader-qt

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: ci.yml
cmake/: LogosFormatLoaderImplConfig.cmake
nix/: bin.nix  build.nix  default.nix  include.nix  lib.nix  tests.nix
src/: CMakeLists.txt  qt_plugin_format_loader.cpp  qt_plugin_format_loader.h  qt_plugin_format_loader_factory.cpp
src/host/: command_line_parser.cpp  command_line_parser.h  logos_host.cpp  module_initializer.cpp  module_initializer.h  token_source.cpp  token_source.h
src/host/qt/: qt_app.cpp  qt_app.h
tests/: CMakeLists.txt  test_qt_plugin_format_loader.cpp  test_token_source.cpp
